--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,9 @@ coverage/
 # Documentation (optional - remove if you want to track MD files)
 MD Files/
 
+# Local seed scripts
+SEED_DATA.js
+
 # Lock files (optional - uncomment if using specific package manager)
 # package-lock.json
 # yarn.lock
