feat: Update service name in render.yaml and enhance CORS handling in app.ts; refine Vercel rewrites for better routing

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   # Backend API Service
   - type: web
-    name: portfolio-api
+    name: shaniprajapati
     runtime: node
     rootDir: server
     buildCommand: npm install && npm run build
